Slightly refined event search
It now uses terms and top hits aggregations for document deduping and paging. Event IDs are no longer sent to Mongo for population. All necessary data is now stored in Elastic.

The ability to search Attendees has also been added.
