# lib/controllers/routes/events.js
@@ -167,7 +167,8 @@ router.get('/getEventCheckIns', function(req, res){
  router.get('/searchEvents', function(req, res){
    var time = Date.now();
    eventsService.searchEvents({
-     'query' : req.query.q,
+     'query' : req.query.query,
+     'fields' : req.query.fields,
      'user' : req.user,
      'limit' : req.query.limit,
      'page' : req.query.page,
@@ -187,7 +188,19 @@ router.get('/getEventCheckIns', function(req, res){
  });
 
  router.get('/searchAttendees', function(req, res){
-
+   eventsService.searchCheckIns({
+     'eventID' : req.query.eventID,
+     'query' : req.query.query,
+     'user' : req.user,
+     'limit' : req.query.limit,
+     'page' : req.query.page,
+     'fields' : req.query.fields,
+     'inviteStatuses' : req.query.inviteStatus
+   }).then(function(result){
+     res.send(result);
+   }).catch(function(error){
+     res.status(error.status).send(error);
+   });
  });
 
  /**
