# lib/models/dao/ElasticDao.js
@@ -15,9 +15,9 @@ elasticClient.indices.create({
   elasticClient.indices.putMapping({
     'index': 'eventdb',
     'type':'checkin',
-    'body':{
-      'checkin' :{
-        'properties':{
+    'body': {
+      'checkin' : {
+        'properties': {
           // denormalized event data
           'event' : {'type' : 'string'},// id of the referenced event
           'title' : {'type' : 'string'},
@@ -25,6 +25,10 @@ elasticClient.indices.create({
           'endDate' : {'type' : 'date'},
           'location' : {'type' : 'string'},
           'private' : {'type' : 'boolean'},
+          'description' : {'type' : 'string'},
+          'imageUrl' : {'type' : 'string'},
+          'thumbnailUrl' : {'type' : 'string'},
+          'orgName' : {'type' : 'string'},
           // checkin data
           'personID' : {'type' : 'string'},
           'name' : {'type' : 'string'},
@@ -69,25 +73,23 @@ class ElasticDao {
   searchEvents(options){
     return new Promise(function(resolve, reject){
       var time = Date.now();
-      console.log('entered');
+      console.log(options.limit);
+      console.log(options.page);
       options.query = options.query || '';
-
       var regexQuery = {'query_string': {
-        'fields': options.searchFields,
+        'fields': options.fields,
         'query': '*' + options.query + '*',
-        'boost' : 3.0
+        'boost' : 20.0
       }};
       var fuzzyQuery = {'multi_match': {
-        'fields': options.searchFields,
+        'fields': options.fields,
         'query': options.query,
-        'fuzziness' : 'AUTO'
+        'fuzziness' : 'AUTO',
       }};
-      //options.searchFields = ['title^20']
+      console.log((options.limit * options.page) + options.limit);
       var searchOptions = {
         'index' : 'eventdb',
-        //'type' : 'checkin',
         'body' : {
-          //'_source' : ['event'],
           'query' : {
             'bool' : {
               'filter' : { // filter so that it only contains things within org
@@ -106,16 +108,7 @@ class ElasticDao {
                     }}
                   ],
                   'should' : [
-                    {'query_string': {
-                      'fields': options.searchFields,
-                      'query': '*' + options.query + '*',
-                      'boost' : 20.0 // exact match? boost it
-                    }},
-                    {'multi_match': {
-                      'fields': options.searchFields,
-                      'query': options.query,
-                      'fuzziness' :'AUTO'
-                    }}
+                    regexQuery, fuzzyQuery
                   ],
                   'minimum_should_match' : 1
                 }},
@@ -129,53 +122,44 @@ class ElasticDao {
                     }}
                   ],
                   'should' : [
-                    {'query_string': {
-                      'fields': options.searchFields,
-                      'query': '*' + options.query + '*',
-                      'boost' : 20.0
-                    }},
-                    {'multi_match': {
-                      'fields': options.searchFields,
-                      'query': options.query,
-                      'fuzziness' : 'AUTO'
-                    }}
+                    regexQuery, fuzzyQuery
                   ],
                   'minimum_should_match' : 1
                 }}
               ],
               'minimum_should_match' : 1
             }
-          }
-          ,
+          },
           'aggs' : {
-            'eventIDs' : {
-              'terms' : {
-                'field' : 'event',
-                'size' : 500, // search is limited to 500 hits because of performance impact,
-                'order' : {
-                  'max_score' : 'desc'
-                }
-              },
-              'aggs' : { // sub aggregation to sort by score
-                'max_score' : {
-                  'max' : {
-                    'script' : {
-                      'file' : 'score',
-                      'lang' : 'groovy'
-                    }
-                  }
-                }
-              }
-            }
-          }
+            "dedup" : {
+              "terms":{
+                'size' : (options.limit * options.page) + options.limit,
+                "field": "event",
+               },
+               "aggs":{
+                 "dedup_docs":{
+                   "top_hits":{
+                     'size' : 1,
+                     'sort' : [{
+                       '_score' : 'desc'
+                     }],
+                     "_source"  : {
+                       'excludes' : [
+                         'personID', 'name', 'checkedIn', 'timestamp', 'eventManager','image', 'email'
+                       ]
+                     }
+                   }
+                 }
+               }
+             }
+           }
         }
       };
-      //searchOptions.body.aggs.eventIDs.terms.size = 25;
-      // add in optional match filters
+      console.log('sljifiljesfjlsefijsfe');
       if(options.user.userType === 'admin'){
         searchOptions.body.query.bool.should = searchOptions.body.query.bool.should.slice(1,1);
         if(options.private !== undefined){
-          searchOptions.body.query.bool.should[0].bool.must.push({
+          searchOptions.body.query.bool.should[0].bool.filter.push({
             'match' : {
               'private' : options.private === 'true'
             }
@@ -184,14 +168,14 @@ class ElasticDao {
       }
       else{
         if(options.managing !== undefined){
-          searchOptions.body.query.bool.should[0].bool.must.push({
+          searchOptions.body.query.bool.should[0].bool.filter.push({
             'match' : {
               'eventManager' : options.managing === 'true'
             }
           });
         }
         if(options.private !== undefined){
-          searchOptions.body.query.bool.should[0].bool.must.push({
+          searchOptions.body.query.bool.should[0].bool.filter.push({
             'match' : {
               'private' : options.private === 'true'
             }
@@ -210,10 +194,14 @@ class ElasticDao {
 
   searchCheckIns(options){
     // TODO: Complete the search function
-    return elasticClient.search({
+    console.log(options);
+    var searchOptions = {
       'index' : 'eventdb',
       'type' : 'checkin',
       'body' : {
+        '_source' : ['id','image', 'checkedIn', 'inviteStatus', 'timestamp', 'orgGuid', 'eventManager', 'personID', 'email', 'name'],
+        'from' : options.limit * options.page,
+        'size' : options.limit,
         'query': {
           'bool' : {
             'filter' : [
@@ -223,14 +211,19 @@ class ElasticDao {
             ],
             'must' : [
               { 'query_string': {
-                'default_field': 'name',
+                'fields': options.fields,
                 'query': '*' + options.query + '*'
               }}
             ]
           }
         }
       }
-    });
+    };
+    if (options.checkedIn !== undefined)
+      searchOptions.body.query.bool.filter.push({'match' : {'checkedIn' : options.checkedIn}});
+    if(options.inviteStatus !== undefined)
+      searchOptions.body.query.bool.filter.push({'match' : {'inviteStatus' : options.inviteStatuses}});
+    return elasticClient.search(searchOptions);
   }
 
   insertEventAndCheckIn(options){
