# lib/models/dao/EventDao.js
@@ -20,6 +20,7 @@ class EventDao {
    * The result contains the newly created event. Mongo's default error is given back when rejected.
    **/
   insertEvent(eventData){
+    eventData.id = eventData._id = mongoose.Types.ObjectId();
     var event = new Event(eventData);
     return new Promise(function(resolve, reject){
       event.save(function(error, result){
@@ -373,7 +374,7 @@ class EventDao {
    **/
   getEventCheckIns(options){
     return new Promise(function(resolve, reject){
-      CheckIn.find({'event' : options.eventID, 'checkedIn' : true}).select('-eventManager -event -id')
+      CheckIn.find({'event' : options.eventID, 'checkedIn' : true}).select('-event')
         .limit(options.limit).skip(options.limit * options.page).sort({'timestamp' : 1}).exec(function(error, result){
           if(error || result === undefined)
             reject(new EventDaoError(error, eventErrorTypes.GENERIC_ERROR));
@@ -392,6 +393,7 @@ class EventDao {
    *  The result contains newly created check in. Mongo's default error is given back when rejected.
    **/
   insertCheckIn(checkInData){
+    checkInData._id = checkInData.id = mongoose.Types.ObjectId();
     var checkIn = new CheckIn(checkInData);
     return new Promise(function(resolve, reject){
       checkIn.save(function(error, result){
